ingress2/01ingress-deploy-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app1
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo APP1 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
