ingress2/02ingress-deploy-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo APP2 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
